--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,8 @@
+<!-- <h1><%= @post.title %></h1>
+<p><%= @post.updated_at.strftime("Last updated %A, %b %e, at %l:%M %p") %></p>
+<p><%= @post.description %></p> -->
 <% @posts.each do |post| %>
-  <div><%= post.title %></div>
+  <div>
+    <%= post.title %> - <%= last_updated post %>
+  </div>
 <% end %>
